integrate api files into start.sh/bat and add parentfolder to web api